--- a/css/Home.css
+++ b/css/Home.css
@@ -1,7 +1,23 @@
 .main__inner {
+  padding: 0;
   padding-bottom: 5.625rem;
-  padding: 0 10.3125rem;
-  padding-bottom: 8.1875rem;
+}
+@media screen and (min-width: 34em) {
+  .main__inner {
+    padding: 0;
+    padding-bottom: 4.125rem;
+  }
+}
+@media screen and (min-width: 46em) {
+  .main__inner {
+    padding: 0 8.4375rem;
+    padding-bottom: 4.125rem;
+  }
+}
+@media screen and (min-width: 62.5em) {
+  .main__inner {
+    padding: 0 10.3125rem;
+  }
 }
 .main__container {
   max-width: 1110px;
